bin_PROGRAMS=sip_detector
sip_detector_SOURCES=sip_detector.c sip_ip_entry.c sip_circle_array.c sip_call.c sip_call.h  sip_circle_array.h  sip_constants.h  sip_detector.h  sip_ip_entry.h  sip_stats.h
sip_detector_LDADD=-ltrap -lunirec -lnemea-common
sip_detector_CFLAGS=-std=c99 -O2 -Wall -pedantic
sip_detector_CXXFLAGS=-O2
pkgdocdir=${docdir}/sip_detector
dist_pkgdoc_DATA=README

