bin_PROGRAMS=voip_fraud_detection
voip_fraud_detection_SOURCES=voip_fraud_detection.c \
                             voip_fraud_detection.h \
                             cache_node_no_attack.c \
                             cache_node_no_attack.h \
                             output.c \
                             output.h \
                             configuration.h
voip_fraud_detection_LDADD=-lunirec -ltrap -lm -lnemea-common

